<?xml version="1.0"?>
<package format="3">
  <name>webots_practice2</name>
  <version>0.0.1</version>
  <description>Launches Webots with a TurtleBot3 driver.</description>

  <maintainer email="you@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- This is a C++ package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
